--- a/galleries.yaml
+++ b/galleries.yaml
@@ -1,67 +1,67 @@
-- title: Bonaire-avril-2019,
-  description: Bonaire,
+- title: Bonaire-avril-2019
+  description: Bonaire
   img: 1542
 
-- title: Brayka baie nov 2018,
-  description: Egypte,
+- title: Brayka baie nov 2018
+  description: Egypte
   img: 1149
 
-- title: Coraya baie avril 2018,
-  description: Egypte,
+- title: Coraya baie avril 2018
+  description: Egypte
   img: 1087
 
-- title: Coraya baie mai 2017,
-  description: Égypte,
+- title: Coraya baie mai 2017
+  description: Égypte
   img: 57
 
-- title: Méditerranée,
-  description: Méditerranée,
+- title: Méditerranée
+  description: Méditerranée
   img: 1374
 
-- title: Coral garden nov 2017,
-  description: Égypte,
+- title: Coral garden nov 2017
+  description: Égypte
   img: 733
 
-- title: Coraya baie nov 2016,
-  description: Égypte,
+- title: Coraya baie nov 2016
+  description: Égypte
   img: 233
 
-- title: Brayka baie nov 2015,
-  description: Égypte,
+- title: Brayka baie nov 2015
+  description: Égypte
   img: 394
 
-- title: Coral garden avr 2015,
-  description: Égypte,
+- title: Coral garden avr 2015
+  description: Égypte
   img: 471
 
-- title: Coraya baie avr 2014,
-  description: Égypte,
+- title: Coraya baie avr 2014
+  description: Égypte
   img: 634
 
-- title: egypte-Coraya-baie-avr-2014,
-  description: Égypte,
+- title: egypte-Coraya-baie-avr-2014
+  description: Égypte
   img: 1463
 
-- title: Bonaire avril 2016,
-  description: Bonaire,
+- title: Bonaire avril 2016
+  description: Bonaire
   img: 944
 
-- title: Juvenile,
-  description: Juvenile,
+- title: Juvenile
+  description: Juvenile
   img: 82
 
-- title: Nuit,
-  description: Nuit,
+- title: Nuit
+  description: Nuit
   img: 698
 
-- title: Macro,
-  description: Macro,
+- title: Macro
+  description: Macro
   img: 48
 
-- title: Lanzarote,
-  description: Les îles Canaries,
+- title: Lanzarote
+  description: Les îles Canaries
   img: 24
 
-- title: Alphabetique,
-  description: Alphabetique,
+- title: Alphabetique
+  description: Alphabetique
   img: 484
