Coraya baie Nov 2014

--- a/galleries.yaml
+++ b/galleries.yaml
@@ -38,9 +38,9 @@
   description: Égypte
   img: 634
 
-- title: egypte-Coraya-baie-avr-2014
+- title: Coraya baie Nov 2014
   description: Égypte
-  img: 1463
+  img: 1475
 
 - title: Bonaire avril 2016
   description: Bonaire
